[package]
name = "hop-endpoint"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
description = "hops:// origin endpoint — a listening Hop node that translates hops requests to its OWN HTTP backend (DESIGN.md §30). Operator-run; bound to one domain; never an open proxy."

[dependencies]
hop-core.workspace = true
# services-r3-03: reuse the ONE shared, tested relay-degrade precedence (resolve_relay) so the
# gateway and endpoint cannot drift. Default (lib-only) features — no reqwest/tungstenite pulled in.
hop-gateway = { path = "../hop-gateway" }
# rustls feature so the endpoint can DIAL a relay over wss:// (be routable on the mesh, §30).
tungstenite = { version = "0.30", features = ["rustls-tls-webpki-roots"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
bs58 = "0.5"
# Base64 (std alphabet) for the `reach` field of the /.well-known/hop body, matching every endpoint
# SDK's discovery format so the drivers decode it identically (DESIGN.md §30).
base64 = "0.22"
