# --- injected for the standalone mirror by tools/copybara/copy.bara.sky ---
[workspace]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"
repository = "https://github.com/hopmesh/hop"

[workspace.dependencies]
hop-core = { version = "0.0.1", package = "hop-mesh-core" }
hop-endpoint-core = { version = "0.0.1", package = "hop-mesh-endpoint-core" }
hop-store-sqlite = { version = "0.0.1", default-features = false, package = "hop-mesh-store-sqlite" }
hop-store-firestore = { version = "0.0.1", package = "hop-mesh-store-firestore" }
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", features = ["use-std"] }
blake3 = "1"
sha2 = "0.11"
ed25519-dalek = { version = "3", features = ["rand_core"] }
x25519-dalek = { version = "3", features = ["static_secrets"] }
chacha20poly1305 = "0.11"
rand_core = { version = "0.6", features = ["getrandom"] }
thiserror = "2"
miniz_oxide = "0.9"
snow = "0.10"
rusqlite = { version = "0.40", features = ["bundled"] }
# --- end injected preamble ---
[package]
name = "hop-endpoint"
version.workspace = true
edition.workspace = true
license-file = "LICENSE.md"
repository.workspace = true
description = "hops:// origin endpoint — a listening Hop node that translates hops requests to its OWN HTTP backend (DESIGN.md §30). Operator-run; bound to one domain; never an open proxy."

[dependencies]
hop-core.workspace = true
hop-endpoint-core.workspace = true
# services-r3-03: reuse the ONE shared, tested relay-degrade precedence (resolve_relay) so the
# gateway and endpoint cannot drift. Default (lib-only) features — no reqwest/tungstenite pulled in.
hop-gateway = { path = "../hop-gateway" }
# rustls feature so the endpoint can DIAL a relay over wss:// (be routable on the mesh, §30).
tungstenite = { version = "0.30", features = ["rustls-tls-webpki-roots"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
bs58 = "0.5"
# Base64 (std alphabet) for the `reach` field of the /.well-known/hop body, matching every endpoint
# SDK's discovery format so the drivers decode it identically (DESIGN.md §30).
base64 = "0.22"
